--- a/src/app/cadastro/cadastro-edit.component.css
+++ b/src/app/cadastro/cadastro-edit.component.css
@@ -23,7 +23,7 @@ h2{
   color: #4dd0e1;
 }
 
-input[type=text], input[type=password] {
+input[type=text], input[type=password], input[type=email], input[type=tel] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
