ajuste nome Submit
submitUsuario

--- a/src/app/cadastro/cadastro-edit.component.html
+++ b/src/app/cadastro/cadastro-edit.component.html
@@ -4,7 +4,7 @@
 
 		<app-logout></app-logout>
 
-		<form [formGroup]="usuarioForm" (ngSubmit) = "cadastrarUsuario()">
+		<form [formGroup]="usuarioForm" (ngSubmit) = "submitUsuario()">
 			<h2>{{ titulo }}</h2>
 			<div style="display: flex; align-items: center;" class="form-group">
 				<label>Admin:</label>
